--- a/temp.css
+++ b/temp.css
@@ -23,7 +23,10 @@ html, body {
 width: 100%;
 height: 100%;
 overflow-x: hidden; /* Prevent horizontal scrolling */
+
 }
+
+
 .img img{
     width: 600px;
 }
@@ -141,7 +144,11 @@ header{
     padding: 20px;
     /* z-index: 1000; */
 }
-
+#template-container {
+ display: flex;
+ flex-wrap: wrap;
+justify-content: center;
+}
 /* Menu Toggle Button */
 .menu-toggle {
     position: fixed;
@@ -286,7 +293,9 @@ main {
 }
 .logo img{
     width: 250px;
+ 
 }
+
 
 .custom ul li{
     display: inline-block;
@@ -856,6 +865,12 @@ ooter {
     justify-content: center;
 
 }
+footer{
+    position: sticky;
+width: 100%;
+    z-index: 1000; 
+} 
+
 
 @media screen and (max-width:1145px) {
     .nav{
@@ -877,8 +892,31 @@ ooter {
 font-size: 15px !important;
 
     }
+    .upwork{
+        display: none;
+    }
+    .custom{
+        display: none;
+    }
+ 
+    .logo img{
+        width: 200px;
+    }
+   .side1{
+ 
+    width: 100%;
+   }
+   .side1{
+    display: flex;
+    align-items: center ;
+  justify-content: start;
 }
-
+.logo{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+}
 @media screen and (max-width: 537px) {
 .upwork{
     display: none;
@@ -937,14 +975,7 @@ font-size: 15px !important;
     .custom{
         display: none;
     }
-    .side1{
-        display: flex;
-        justify-content: center;
-text-align: center;
-        align-items: center;
-    
-        width: 100%;
-    }
+  
    }
    @media screen and (max-width: 408px) {
   .search input{
@@ -1078,12 +1109,7 @@ text-align: center;
     }
 
     /* footer margin */
-    footer {
-        margin-top: 20px;
-       
-    
-      
-    }
+  
 
     /* copyright */
     .copyright {
